<resources>
    <string name="app_name">latihanRoomDBL</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name :</string>
    <string name="last_name">Last Name :</string>
    <string name="age">Age :</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
</resources>