<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateFragment"
    android:padding="10dp">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_firstName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="sans-serif-black"
            android:hint="@string/first_name"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/et_lastName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="sans-serif-black"
            android:hint="@string/last_name"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/et_age"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="sans-serif-black"
            android:hint="@string/age"
            android:textStyle="italic" />

        <Button
            android:id="@+id/update"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/black"
            android:text="@string/update" />

        <Button
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/black"
            android:text="Delete" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>